gcc/testsuite/rust/rustc/ui/panic-handler/panic-handler-bad-signature-5_dg.rs
//@ compile-flags:-C panic=abort

#![no_std]
#![no_main]

use core::panic::PanicInfo;

#[panic_handler]
fn panic(info: &PanicInfo<'static>) -> !
// { dg-error ".E0308." "" { target *-*-* } .-1 }
{
    loop {}
}

